# pxbackup-ansible-runner

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .windsurfrules  Dockerfile  Dockerfile.dev  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  docker.yml  python-app.yml  test.yml
app/: __init__.py  auth.py  init_playbooks.py  logging_config.py  models.py  routes.py  schemas.py
app/routes/: auth.py
app/utils/: __init__.py  config.py  error_handlers.py  exceptions.py  health.py  monitoring.py  validation.py  vault_client.py
config/: kind.yaml  prometheus.yml
docs/: api.md  development.md  local_development.md  playbooks.md
k8s/dev/: README.md  database.yaml  flask-app-hpa.yaml  flask-app.yaml  gitea.yaml  keycloak.yaml  kustomization.yaml  mock-inventory.yaml  namespace.yaml  postgres.yaml  prometheus.yaml  redis.yaml  vault.yaml
kind/: cluster-config.yaml  config.yaml
scripts/: cleanup_dev.sh  cleanup_local.sh  docker-entrypoint-dev.sh  setup_dev.sh  setup_local.sh
tests/: conftest.py
tests/unit/: test_models.py  test_monitoring.py  test_routes.py
