[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pxbackup-ansible-runner"
version = "0.1.0"
description = "Ansible Runner for PX-Backup"
requires-python = ">=3.9,<3.15"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]

dependencies = [
    # Core Flask dependencies
    "Flask>=3.0.0,<4.0.0",
    "Flask-SQLAlchemy>=3.1.0,<4.0.0",
    "Flask-Migrate>=4.0.0,<5.0.0",
    "Flask-Cors>=4.0.0,<5.0.0",
    "Flask-Caching>=2.1.0,<3.0.0",
    "Flask-Limiter>=3.5.0,<4.0.0",

    # Ansible and Kubernetes
    "ansible>=8.5.0,<9.0.0",
    "ansible-core>=2.15.0,<2.16.0",
    "ansible-runner>=2.3.0,<3.0.0",
    "kubernetes>=29.0.0,<30.0.0",

    # Authentication and Security
    "cryptography>=42.0.0,<43.0.0",
    "okta-jwt-verifier>=0.2.0,<0.3.0",
    "python-keycloak>=3.7.0,<4.0.0",
    "PyJWT>=2.8.0,<3.0.0",
    "hvac>=2.1.0,<3.0.0",

    # Database and Storage
    "SQLAlchemy>=2.0.0,<3.0.0",
    "alembic>=1.13.0,<2.0.0",
    "asyncpg>=0.29.0,<0.30.0",
    "psycopg2-binary>=2.9.0,<3.0.0",
    "redis>=5.0.0,<6.0.0",

    # HTTP and API
    "aiohttp>=3.9.0,<4.0.0",
    "aiohappyeyeballs>=2.4.0,<3.0.0",
    "httpx>=0.25.0,<0.26.0",
    "requests>=2.31.0,<3.0.0",
    "grpcio>=1.62.0,<2.0.0",

    # Monitoring and Metrics
    "prometheus-client>=0.19.0,<0.20.0",
    "prometheus-flask-exporter>=0.22.0,<0.23.0",
    "structlog>=23.2.0,<24.0.0",

    # Task Scheduling and Management
    "APScheduler>=3.10.0,<4.0.0",
    "tenacity>=8.2.0,<9.0.0",

    # Utilities
    "gitpython>=3.1.40,<4.0.0",
    "gunicorn>=21.2.0,<22.0.0",
    "psutil>=5.9.0,<6.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "pydantic>=2.5.0,<3.0.0",
    "PyYAML>=6.0.0,<7.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.12.0,<24.0.0",
    "flake8>=7.0.0,<8.0.0",
    "isort>=5.13.2,<6.0.0",
]

[tool.black]
line-length = 150
target-version = ["py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 150
